--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/filters/filters.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/filters/filters.component.html
@@ -6,7 +6,7 @@
     <div class="category" (click)="onCategoryHeadClick()">Categories</div>
   </div>
   <div id="list" style="display: block;visibility: visible;">
-    <div style="display: block;" *ngFor="let item of getResponse()">
+    <div style="display: block;" *ngFor="let item of categoryList">
       <div
         id="list-of-categories"
         class="list-of-categories"
