--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.css
@@ -103,9 +103,16 @@
   }
 
   .topbar {
+    bottom: 10px;
+    left: 10px;
     cursor: pointer;
     display: flex;
     padding: 10px;
+  }
+  
+  .pg-number{
+    margin-left: 5px;
+    margin-right: 5px;
   }
   .head {
     display: flex;
