--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.css
@@ -15,6 +15,12 @@
   margin: 0;
 }
 
+.head{
+  font-size: medium;
+  font-family: sans-serif;
+
+}
+
 .headers .username {
   /* background-color: lawngreen; */
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -51,4 +57,101 @@
   font-size: xx-large;
   font-weight: bolder;
   margin-top: 16px;
+}
+
+.list-of-questions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 16px;
+}
+.question-card {
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 80%;
+  height: max-content;
+}
+.question-item {
+  display: flex;
+  justify-content: left;
+}
+.answer-layout {
+  width: max-content;
+  height: max-content;
+  text-align: center;
+  align-self: center;
+  padding: 5px;
+  float: left;
+}
+.answer-text {
+  color: green;
+  font-size: small;
+  margin-top: 5px;
+}
+.no-of-answers {
+  color: green;
+  font-weight: bolder;
+  font-size: x-large;
+}
+
+.question-layout {
+  width: max-content;
+  float: left;
+  padding: 10px;
+  margin-left: 16px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.question {
+  color: #1776bf;
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: medium;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.description {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  color: lightslategrey;
+  font-size: smaller;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  cursor: pointer;
+  outline: none;
+}
+
+.chips {
+  font-size: smaller;
+  color: #fff;
+  position: relative;
+  background-color: #1776bf;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  border-radius: 15px;
+  cursor: pointer;
+}
+.chips:hover {
+  font-size: smaller;
+  color: #fff;
+  position: relative;
+  background-color: #0f4c7b;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  border-radius: 15px;
+
 }
