--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/filters/filters.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/filters/filters.component.css
@@ -123,7 +123,7 @@
   padding-top: 4px;
   padding-bottom: 4px;
   border-radius: 15px;
-  background-color: lightgray;
+  background-color: #eeeeeed0;
   color: #000000;
   margin-right: 5px;
   margin-bottom: 10px;
