--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 16px;
+  margin-top: 16px;
 }
 .question-card {
   margin-bottom: 10px;
