--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.css
@@ -145,17 +145,29 @@
   width: 50px;
   height: 50px;
 }
-
+.admin {
+  font-family: sans-serif;
+  font-size: x-small;
+  background-color: #0f4c7b;
+  color: #fff;
+  height: 20px;
+  text-align: center;
+  margin-left: 10px;
+  padding-right: 5px;
+  padding-left: 5px;
+  width: min-content;
+  border-radius: 4px;
+}
 .dropdown {
   position: absolute;
   display: flex;
+  height: fit-content;
   margin-right: 20px;
   margin-top: 8px;
   margin-bottom: 8px;
   right: 0;
   bottom: 0;
   top: 0;
-  padding: 8px;
 }
 
 .menu-items {
