--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.html
@@ -32,8 +32,8 @@
             <div class="answer-text">Answers</div>
           </div>
           <div class="question-layout">
-            <a class="question" id="ques" [routerLink]="['/main/approval', list.Question.id]">{{ list.Question.question }}</a>
-            <div class="description" [routerLink]="['/main/approval', list.Question.id]" >{{ list.Question.description }}</div>
+            <a class="question" id="ques" [routerLink]="['/main/qna', list.Question.id]">{{ list.Question.question }}</a>
+            <div class="description" [routerLink]="['/main/qna', list.Question.id]" >{{ list.Question.description }}</div>
               <span *ngFor="let tag of list.tags" class="chips"> {{ tag }}</span>
           </div>
         </div>
