--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.html
@@ -66,7 +66,7 @@
               <div class="card">
                 <div
                   class="question"
-                  [routerLink]="['main/qna', list.Question.id]"
+                  [routerLink]="['main/qna/approved/', list.Question.id]"
                   (click)="onClick(list.Question.id)"
                 >
                   {{ list.Question.question }}
