--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.html
@@ -29,19 +29,17 @@
             <div class="question-layout">
               <a
                 class="question"
-                [routerLink]="['/main/qna', list.Question.id]"
+                [routerLink]="['/main/qna/approved/', list.Question.id]"
                 (click)="onClick(list.Question.id)"
                 >{{ list.Question.question }}</a
               >
               <div
                 class="description"
-                [routerLink]="['/main/qna', list.Question.id]"
+                [routerLink]="['/main/qna/approved/', list.Question.id]"
                 (click)="onClick(list.Question.id)"
               >
                 {{ list.Question.description }}
               </div>
-              <!-- <div class="description" [routerLink]="['/qna', list.Question.id]" (click)= "onClick(list.Question.id)" [innerHtml]=list.Question.description></div> -->
-
               <span
                 *ngFor="let tag of getTags(list.tags)"
                 class="chips"
